# peter-s-qt-center

./: README.md
Class/QCommandLineParser/: desc.md
Class/QCommandLineParser/Example/: CMakeLists.txt  main.cpp
